--- a/labs/lab1/css/styles.css
+++ b/labs/lab1/css/styles.css
@@ -3,10 +3,18 @@ body{
     color:gray;
     }
 
-header, main, nav, footer{
-    text-align: center;
+header, main, nav, #content{
+        width: 1400px;
+        margin: 0 auto; 
+        text-align: center; 
 }
 
+
+h1{
+    font-family: 'Pacifico', cursive;
+    font-size: 4em;
+    margin-bottom: 0px;
+}
 
 nav a { /* links within "nav" container */
     padding:15px;
@@ -29,14 +37,12 @@ nav a:hover { /*pseudo class*/
     float:left;
      text-align: left;
 }
-#foot{
-    color: red;
-    font-size: 10px;
-}
-
 
 footer{
     clear: left;
+    text-align: center;
+    /*color: red; */
+    font-size: 12px;
 }
 
 table{
@@ -61,6 +67,7 @@ td strong{
 }
 
 ul{
+    margin: 0px auto;
     text-align: left;
     padding-left: 200px;
 }
